# mcidle-python

./: .gitignore  LICENSE  Pipfile  README.md  mcidle.py  requirements.txt  run.py  setup.cfg  test.py  test2.py
src/mcidle/: cli.py
src/mcidle/networking/: anti_afk.py  connection.py  game_state.py
src/mcidle/networking/auth/: __init__.py  auth.py  profile.py
src/mcidle/networking/packet_handler/: packet_handler.py  packet_processor.py
src/mcidle/networking/packet_handler/clientbound/: __init__.py  login_handler.py
src/mcidle/networking/packet_handler/serverbound/: __init__.py  idle_handler.py  login_handler.py
src/mcidle/networking/packets/clientbound/: __init__.py
src/mcidle/networking/packets/serverbound/: __init__.py
src/mcidle/networking/types/: __init__.py  utility.py
src/networking/: anti_afk.py  connection.py  encryption.py  game_state.py  listen_thread.py  packet_handler.py  upstream.py
src/networking/auth/: __init__.py  auth.py  exceptions.py
src/networking/packet_handler/: __init__.py  packet_handler.py  packet_logger.py  packet_processor.py  worker_logger.py  worker_processor.py
src/networking/packet_handler/clientbound/: __init__.py  login_handler.py
src/networking/packet_handler/serverbound/: __init__.py  idle_handler.py  login_handler.py
src/networking/packets/: packet.py  packet_buffer.py
src/networking/packets/clientbound/: __init__.py
src/networking/packets/exceptions/: __init__.py
src/networking/packets/serverbound/: __init__.py
src/networking/types/: __init__.py  basic.py  test.py  type.py  utility.py
