[metadata]
name = mcidle
author = qubard
author-email = qubard@gmail.com
home-page = https://github.com/qubard/mcidle-python/
description = Idling middleware for deploying a remote Minecraft connection to allow reconnection at any time.
long-description = file: README.md
long_description_content_type = text/markdown
license = MIT
license-file = LICENSE
platform = any
keywords = minecraft bouncer
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
project_urls =
    Bug Tracker = https://github.com/qubard/mcidle-python/issues/

[options]
zip_safe = False
packages = find:
include_package_data = True
package_dir =
    =src
install_requires =
    cryptography~=2.4.0
    requests~=2.20.0
    NBT~=1.5.0

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
     mcidle = mcidle.cli:main

[bdist_wheel]
universal = 1
